--- a/.github/workflows/Contributions_Snake.yml
+++ b/.github/workflows/Contributions_Snake.yml
@@ -1,6 +1,6 @@
 # GitHub Action for generating a contribution graph with a snake eating your contributions.
 
-name: Generate Snake
+name: Generate Animation Snake
 
 # Controls when the action will run. This action runs every 24 hours.
 
